# ieee-fraud-detection

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
dashboard/: app.py  precompute.py
dashboard/data/: .gitignore  amt_by_fraud.csv  c_features_corr.csv  feature_group_importance.csv  fraud_by_P_emaildomain.csv  fraud_by_R_emaildomain.csv  fraud_by_card1_top15.csv  fraud_by_card4.csv  fraud_by_card6.csv  fraud_by_device_info.csv  fraud_by_device_type.csv  fraud_by_dow.csv  fraud_by_email_match.csv  fraud_by_hour.csv  fraud_by_identity.csv  fraud_by_product.csv  pr_curve.csv  (+6 more)
docs/: requirements.txt
notebook/: 01_data_loading.ipynb  02_eda_transaction.ipynb  03_eda_identity_features.ipynb  04_missing_value_analysis.ipynb  05_target_distribution_imbalance.ipynb  06_feature_correlation_analysis.ipynb  07_feature_engineering_exploration.ipynb  08_feature_importance_selection.ipynb  09_baseline_model_logistic.ipynb  10_advanced_model_training.ipynb  11_hyperparameter_tuning.ipynb  12_ensemble_methods.ipynb  13_model_evaluation.ipynb  14_error_analysis.ipynb  15_final_summary.ipynb  README.md
scripts/: prepare_data.py
tests/: conftest.py  test_ensemble.py  test_error_analysis.py  test_evaluation.py  test_integration.py  test_models_advanced.py  test_property_based.py  test_pure_functions.py  test_tuning.py  test_viz_advanced.py
(+23 files in other folders)
