[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud_detect"
version = "0.1.0"
description = "IEEE-CIS fraud detection toolkit — data, features, viz, modelling helpers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "P. Kanisius Bagaskara" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "lightgbm>=4.0",
    "streamlit>=1.28",
]

[project.optional-dependencies]
lgbm = ["lightgbm>=4.0"]
xgb = ["xgboost>=2.0"]
cat = ["catboost>=1.2"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "pre-commit>=3.0",
    "hypothesis>=6.0",
]
dashboard = [
    "streamlit>=1.28",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "sphinx-copybutton>=0.5",
    "myst-parser>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=fraud_detect --cov-report=term-missing"

[tool.coverage.run]
source = ["fraud_detect"]

[tool.coverage.report]
fail_under = 75
exclude_also = ["if TYPE_CHECKING:", "pragma: no cover"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "PL"]
ignore = ["PLR2004", "PLC0415"]

[tool.ruff.format]
quote-style = "double"
